--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -481,9 +481,10 @@
                 <Button
                     android:id="@+id/open_missions_button"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="50dp"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/button_round_12"
+                    app:cornerRadius="10dp"
+                    android:backgroundTint="#F3B24B"
                     android:text="Open missions board"
                     android:textStyle="bold"
                     android:textSize="16sp"
@@ -502,10 +503,10 @@
                 <Button
                     android:id="@+id/facebook_button"
                     android:layout_width="0dp"
-                    android:layout_height="40dp"
+                    android:layout_height="50dp"
                     android:layout_marginEnd="14dp"
                     android:layout_weight="1"
-                    android:background="@drawable/spinner_border_round"
+                    app:cornerRadius="10dp"
                     android:backgroundTint="#166EB7"
                     android:drawableStart="@drawable/ic_baseline_facebook"
                     android:drawableTint="@color/white"
@@ -520,10 +521,9 @@
                 <Button
                     android:id="@+id/tiktok_button"
                     android:layout_width="0dp"
-                    android:layout_height="40dp"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
-                    android:background="@drawable/spinner_border_round"
-                    android:backgroundTint="#2A2A2A"
+                    app:cornerRadius="10dp"                    android:backgroundTint="#2A2A2A"
                     android:drawableStart="@drawable/ic_baseline_tiktok"
                     android:drawableTint="@color/white"
                     android:gravity="center"
