--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
         android:title="Home" />
 
     <item
-        android:id="@+id/trendFragment"
+        android:id="@+id/noteActivity"
         android:icon="@drawable/ic_note"
         android:iconTint="@color/white"
 
