--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -44,15 +44,17 @@
             android:layout_height="40dp"
             android:layout_weight="3"
             android:layout_marginStart="12dp"
-            android:paddingEnd="15dp"
-            android:paddingStart="15dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
             android:text="@string/day"
             android:textStyle="normal"
             android:background="@drawable/spinner_border_round"
             android:gravity="center"
             android:layout_gravity="center"
             android:id="@+id/note_button_type"
-            android:drawableEnd="@drawable/down"
+            android:drawableEnd="@drawable/arrow_down"
+            android:drawableTint="@color/white"
+            android:textColor="@color/white"
             android:textAllCaps="false"
             />
 
@@ -66,9 +68,7 @@
             android:layout_weight="3"
             android:layout_gravity="center"
             android:textStyle="normal"
-            android:background="@drawable/spinner_border_round_orange"
-            android:backgroundTint="@color/selectedicon"
-            android:drawableStart="@drawable/plus_icon"
+            android:background="@drawable/spinner_border_round"
             android:drawableEnd="@drawable/arrow_down"
             android:drawableTint="@color/white"
             android:paddingStart="10dp"
