--- a/app/src/main/res/layout/item_folder_recycleview.xml
+++ b/app/src/main/res/layout/item_folder_recycleview.xml
@@ -44,9 +44,14 @@
             android:layout_height="match_parent"
             android:layout_weight="1.5"
             android:background="@color/trans"
-            android:drawableStart="@drawable/ic_expand"
-            android:drawableTint="@color/blue"
-            android:gravity="left"/>
+            app:icon="@drawable/ic_expand"
+            app:iconTint="@color/blue"
+            app:iconGravity="textStart"
+            android:padding="0dp"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"/>
     </LinearLayout>
 
     <TextView
