--- a/app/src/main/res/layout/activity_language_settings.xml
+++ b/app/src/main/res/layout/activity_language_settings.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:fitsSystemWindows="true"
-    tools:context=".presentation.feature.setting.multilanguage.LanguageSettingsActivity">
+    tools:context=".presentation.feature.menu.setting.multilanguage.LanguageSettingsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/custom_toolbar_container"
